// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationMenu Snapshots matches snapshot when not visible 1`] = `null`;

exports[`NavigationMenu Snapshots matches snapshot with default props 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#fff",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "elevation": 10,
          "flexDirection": "column",
          "maxHeight": "80%",
          "minHeight": 300,
          "pointerEvents": "auto",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": -2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 10,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderBottomColor": "#e0e0e0",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "flexShrink": 0,
            "justifyContent": "space-between",
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2f3542",
              "fontSize": 24,
              "fontWeight": "bold",
            }
          }
        >
          Navigation
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 4,
            }
          }
        >
          <Text
            testID="icon-xmark.circle.fill"
          >
            xmark.circle.fill
          </Text>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "paddingBottom": 20,
          }
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flexGrow": 0,
            "flexShrink": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "alignItems": "center",
                "padding": 40,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#747d8c",
                  "fontSize": 16,
                }
              }
            >
              No navigation options available
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</Modal>
`;

exports[`NavigationMenu Snapshots matches snapshot with empty items 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#fff",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "elevation": 10,
          "flexDirection": "column",
          "maxHeight": "80%",
          "minHeight": 300,
          "pointerEvents": "auto",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": -2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 10,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderBottomColor": "#e0e0e0",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "flexShrink": 0,
            "justifyContent": "space-between",
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2f3542",
              "fontSize": 24,
              "fontWeight": "bold",
            }
          }
        >
          Navigation
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 4,
            }
          }
        >
          <Text
            testID="icon-xmark.circle.fill"
          >
            xmark.circle.fill
          </Text>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "paddingBottom": 20,
          }
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flexGrow": 0,
            "flexShrink": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "alignItems": "center",
                "padding": 40,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#747d8c",
                  "fontSize": 16,
                }
              }
            >
              No navigation options available
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</Modal>
`;

exports[`NavigationMenu Snapshots matches snapshot with items 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#fff",
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "elevation": 10,
          "flexDirection": "column",
          "maxHeight": "80%",
          "minHeight": 300,
          "pointerEvents": "auto",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": -2,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 10,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "borderBottomColor": "#e0e0e0",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "flexShrink": 0,
            "justifyContent": "space-between",
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2f3542",
              "fontSize": 24,
              "fontWeight": "bold",
            }
          }
        >
          Navigation
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "padding": 4,
            }
          }
        >
          <Text
            testID="icon-xmark.circle.fill"
          >
            xmark.circle.fill
          </Text>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          {
            "paddingBottom": 20,
          }
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flexGrow": 0,
            "flexShrink": 1,
          }
        }
      >
        <View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderBottomColor": "#f0f0f0",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "opacity": 1,
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#f5f6fa",
                  "borderRadius": 20,
                  "height": 40,
                  "justifyContent": "center",
                  "marginRight": 12,
                  "width": 40,
                }
              }
            >
              <Text
                testID="icon-house.fill"
              >
                house.fill
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "marginBottom": 2,
                    },
                    {
                      "color": "#11181C",
                    },
                  ]
                }
              >
                Dashboard
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 13,
                    },
                    {
                      "color": "#687076",
                    },
                  ]
                }
              >
                Go to dashboard
              </Text>
            </View>
            <Text
              testID="icon-chevron.right"
            >
              chevron.right
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderBottomColor": "#f0f0f0",
                "borderBottomWidth": 1,
                "flexDirection": "row",
                "opacity": 1,
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#f5f6fa",
                  "borderRadius": 20,
                  "height": 40,
                  "justifyContent": "center",
                  "marginRight": 12,
                  "width": 40,
                }
              }
            >
              <Text
                testID="icon-gear"
              >
                gear
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "marginBottom": 2,
                    },
                    {
                      "color": "#11181C",
                    },
                  ]
                }
              >
                Settings
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 13,
                    },
                    {
                      "color": "#687076",
                    },
                  ]
                }
              >
                Go to settings
              </Text>
            </View>
            <Text
              testID="icon-chevron.right"
            >
              chevron.right
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</Modal>
`;
